--- a/Aplicacion/Aplicacion.csproj
+++ b/Aplicacion/Aplicacion.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0"/>
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6"/>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
